<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar_main"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Catagories"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/cat_title"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="166dp"
        android:gravity="center"
        android:text="@string/OFFERS"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black">
    </TextView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="550dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/re1"
                android:contentDescription="@string/todo" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/re2"
                android:contentDescription="@string/todo4" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/ll" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/bb"
                android:contentDescription="@string/todo3" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ff"
                android:contentDescription="@string/todo3" />
            <ImageView
                android:layout_width="200dp"
                android:layout_height="185dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/mm"
                android:contentDescription="@string/todo3" />





        </LinearLayout>
    </HorizontalScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>